--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,10 +60,10 @@
             android:layout_marginTop="8dp" />
 
         <EditText
-            android:id="@+id/inputName"
+            android:id="@+id/inputKeterangan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Nama warna"
+            android:hint="Keterangan"
             android:layout_marginTop="16dp" />
 
         <Button
